--- a/templates/computer.html
+++ b/templates/computer.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 
 <nav id="toc">
     <div>목차</div>
@@ -33,10 +32,10 @@
     <p>{{ prop }}</p>
 
     <div><a href="#toc" id="s-1-3">1-3</a>. Location</div>
-    <p>
-        행정실위치 : 공대9호관 413호<br />
-        대표연락처 :950-5550/6370
-    </p>
+    <ul>
+        <li>행정실위치 : 공대9호관 413호</li>
+        <li>대표연락처 : 950-5550/6370</li>
+    </ul>
 </section>
 
 <section>
