--- a/templates/electric.html
+++ b/templates/electric.html
@@ -1,9 +1,87 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
 
-{% block content %}
-<!-- 이 사이에 html 작성 -->
+<nav id="toc">
+    <div>목차</div>
+    <div>
+        <div><a href="#s-1">1</a>. Introduction</div>
+        <div><a href="#s-1-1">1-1</a>. Electrical Engineering</div>
+        <div><a href="#s-1-2">1-2</a>. Property</div>
+        <div><a href="#s-1-3">1-3</a>. Location</div>
 
-<main>전기공학과</main>
+        <div><a href="#s-2">2</a>. Grade</div>
+        <div><a href="#s-2-1">2-1</a>. 정시 2021</div>
+        <div><a href="#s-2-2">2-2</a>. 정시 2020</div>
+        <div><a href="#s-2-3">2-3</a>. 정시 2019</div>
 
-<!-- 이 사이에 html 작성 -->
+        <div><a href="#s-3">3</a>. Employment</div>
+        <div><a href="#s-3-1">3-1</a>. Current Situationt</div>
+        <div><a href="#s-3-2">3-2</a>. After Graudation</div>
+        <div><a href="#s-3-3">3-3</a>. Corporation</div>
+    </div>
+</nav>
+
+<section>
+    <div><a href="#toc" id="s-1">1</a>. Introduction</div>
+
+    <div><a href="#toc" id="s-1-1">1-1</a>. Electrical Engineering</div>
+    <p>{{ intro }}</p>
+
+    <div><a href="#toc" id="s-1-2">1-2</a>. Property</div>
+    <p>{{ prop }}</p>
+
+    <div><a href="#toc" id="s-1-3">1-3</a>. Location</div>
+    <ul>
+        <li>행정실위치 : 공대8호관 308호</li>
+        <li>대표연락처 : 053-950-5600</li>
+    </ul>
+</section>
+
+<section>
+    <div><a href="#toc" id="s-2">2</a>. Grade</div>
+
+    <div><a href="#toc" id="s-2-1">2-1</a>. 정시 2021</div>
+    <p>
+        <img
+            src="../static/images/electric_grade_21.jpg"
+            alt="전기공학과 정시 2021"
+        />
+    </p>
+
+    <div><a href="#toc" id="s-2-2">2-2</a>. 정시 2020</div>
+    <p>
+        <img
+            src="../static/images/electric_grade_20.jpg"
+            alt="전기공학과 정시 2020"
+        />
+    </p>
+
+    <div><a href="#toc" id="s-2-3">2-3</a>. 정시 2019</div>
+    <p>
+        <img
+            src="../static/images/electric_grade_19.jpg"
+            alt="전기공학과 정시 2019"
+        />
+    </p>
+</section>
+
+<section>
+    <div><a href="#toc" id="s-3">3</a>. Employment</div>
+
+    <div><a href="#toc" id="s-3-1">3-1</a>. Current Situation</div>
+    <p>
+        <img src="../static/images/computer.jpg" alt="컴퓨터학부 취업통계" />
+    </p>
+
+    <div><a href="#toc" id="s-3-2">3-2</a>. After Graudation</div>
+    <p>
+        IT 계열 기업으로의 취업이 70% 정도를 차지하고 있으며, 일반 기업으로는
+        공무원이나 증권회사와 같은 금융계통, 그리고 일반 사무직 중에서 컴퓨터를
+        많이 다루는 직군에 취업하고 있습니다.
+    </p>
+
+    <div><a href="#toc" id="s-3-3">3-3</a>. Corporation</div>
+    <p>{{ job }}</p>
+</section>
+
 {% endblock %}
+
