--- a/templates/computer.html
+++ b/templates/computer.html
@@ -34,7 +34,7 @@
     <div><a href="#toc" id="s-1-3">1-3</a>. Location</div>
     <ul>
         <li>행정실위치 : 공대9호관 413호</li>
-        <li>대표연락처 : 950-5550/6370</li>
+        <li>대표연락처 : 950-5550-6370</li>
     </ul>
 </section>
 
