--- a/templates/computer.html
+++ b/templates/computer.html
@@ -26,15 +26,15 @@
     <div>
         <a href="#toc" id="s-1-1">1-1</a>. Computer Science and Engineering
     </div>
-    <p>{{ intro }}</p>
+    <p>{{ data['introduction'] }}</p>
 
     <div><a href="#toc" id="s-1-2">1-2</a>. Property</div>
-    <p>{{ prop }}</p>
+    <p>{{ data['property'] }}</p>
 
     <div><a href="#toc" id="s-1-3">1-3</a>. Location</div>
     <ul>
-        <li>행정실위치 : 공대9호관 413호</li>
-        <li>대표연락처 : 950-5550-6370</li>
+        <li>행정실위치 : {{ data['location'] }}</li>
+        <li>대표연락처 : {{ data['number'] }}</li>
     </ul>
 </section>
 
@@ -44,7 +44,7 @@
     <div><a href="#toc" id="s-2-1">2-1</a>. 정시 2021</div>
     <p>
         <img
-            src="../static/images/computer_grade_21.jpg"
+            src={{ grade_21 }}
             alt="컴퓨터학부 정시 2021"
         />
     </p>
@@ -52,7 +52,7 @@
     <div><a href="#toc" id="s-2-2">2-2</a>. 정시 2020</div>
     <p>
         <img
-            src="../static/images/computer_grade_20.jpg"
+            src={{ grade_20 }}
             alt="컴퓨터학부 정시 2020"
         />
     </p>
@@ -60,7 +60,7 @@
     <div><a href="#toc" id="s-2-3">2-3</a>. 정시 2019</div>
     <p>
         <img
-            src="../static/images/computer_grade_19.jpg"
+            src={{ grade_19 }}
             alt="컴퓨터학부 정시 2019"
         />
     </p>
@@ -71,7 +71,7 @@
 
     <div><a href="#toc" id="s-3-1">3-1</a>. Current Situation</div>
     <p>
-        <img src="../static/images/computer.jpg" alt="컴퓨터학부 취업통계" />
+        <img src={{ after_graduation }} alt="컴퓨터학부 취업통계" />
     </p>
 
     <div><a href="#toc" id="s-3-2">3-2</a>. After Graudation</div>
@@ -82,7 +82,7 @@
     </p>
 
     <div><a href="#toc" id="s-3-3">3-3</a>. Corporation</div>
-    <p>{{ job }}</p>
+    <p>{{ data['job'] }}</p>
 
     <a href="https://www.youtube.com/channel/UCboYjEZtDixhOlbmNyJQJDQ"
         >컴퓨터학부 유튜브 채널</a
