--- a/templates/electric.html
+++ b/templates/electric.html
@@ -24,15 +24,15 @@
     <div><a href="#toc" id="s-1">1</a>. Introduction</div>
 
     <div><a href="#toc" id="s-1-1">1-1</a>. Electrical Engineering</div>
-    <p>{{ intro }}</p>
+    <p>{{ data['introduction'] }}</p>
 
     <div><a href="#toc" id="s-1-2">1-2</a>. Property</div>
-    <p>{{ prop }}</p>
+    <p>{{ data['property'] }}</p>
 
     <div><a href="#toc" id="s-1-3">1-3</a>. Location</div>
     <ul>
-        <li>행정실위치 : 공대8호관 308호</li>
-        <li>대표연락처 : 053-950-5600</li>
+        <li>행정실위치 : {{ data['location'] }}</li>
+        <li>대표연락처 : {{ data['number'] }}</li>
     </ul>
 </section>
 
@@ -42,7 +42,7 @@
     <div><a href="#toc" id="s-2-1">2-1</a>. 정시 2021</div>
     <p>
         <img
-            src="../static/images/electric_grade_21.jpg"
+            src={{ grade_21 }}
             alt="전기공학과 정시 2021"
         />
     </p>
@@ -50,7 +50,7 @@
     <div><a href="#toc" id="s-2-2">2-2</a>. 정시 2020</div>
     <p>
         <img
-            src="../static/images/electric_grade_20.jpg"
+            src={{ grade_20 }}
             alt="전기공학과 정시 2020"
         />
     </p>
@@ -58,7 +58,7 @@
     <div><a href="#toc" id="s-2-3">2-3</a>. 정시 2019</div>
     <p>
         <img
-            src="../static/images/electric_grade_19.jpg"
+            src={{ grade_19 }}
             alt="전기공학과 정시 2019"
         />
     </p>
@@ -69,7 +69,7 @@
 
     <div><a href="#toc" id="s-3-1">3-1</a>. Current Situation</div>
     <p>
-        <img src="../static/images/computer.jpg" alt="컴퓨터학부 취업통계" />
+        <img src={{ after_graduation }} alt="전기공학과 취업통계" />
     </p>
 
     <div><a href="#toc" id="s-3-2">3-2</a>. After Graudation</div>
@@ -80,7 +80,7 @@
     </p>
 
     <div><a href="#toc" id="s-3-3">3-3</a>. Corporation</div>
-    <p>{{ job }}</p>
+    <p>{{ data['job'] }}</p>
 </section>
 
 {% endblock %}
