--- a/templates/computer.html
+++ b/templates/computer.html
@@ -4,14 +4,11 @@
     <div>목차</div>
     <div>
         <div><a href="#s-1">1</a>. Introduction</div>
-        <div><a href="#s-1-1">1-1</a>. Computer Science and Engineering</div>
+        <div><a href="#s-1-1">1-1</a>. {{ data['name'] }}</div>
         <div><a href="#s-1-2">1-2</a>. Property</div>
         <div><a href="#s-1-3">1-3</a>. Location</div>
 
         <div><a href="#s-2">2</a>. Grade</div>
-        <div><a href="#s-2-1">2-1</a>. 정시 2021</div>
-        <div><a href="#s-2-2">2-2</a>. 정시 2020</div>
-        <div><a href="#s-2-3">2-3</a>. 정시 2019</div>
 
         <div><a href="#s-3">3</a>. Employment</div>
         <div><a href="#s-3-1">3-1</a>. Current Situationt</div>
@@ -23,9 +20,7 @@
 <section>
     <div><a href="#toc" id="s-1">1</a>. Introduction</div>
 
-    <div>
-        <a href="#toc" id="s-1-1">1-1</a>. Computer Science and Engineering
-    </div>
+    <div><a href="#toc" id="s-1-1">1-1</a>. {{ data['name'] }}</div>
     <p>{{ data['introduction'] }}</p>
 
     <div><a href="#toc" id="s-1-2">1-2</a>. Property</div>
@@ -41,11 +36,17 @@
 <section>
     <div><a href="#toc" id="s-2">2</a>. Grade</div>
 
-    <form  method="POST">
+    <form action="/computer#s-2" method="POST" class="row row-cols-sm-auto align-items-center">
         {{ form.hidden_tag() }}
-        {{ form.grade.label }}
-        {{ form.grade }}
-        {{ form.submit() }}
+        <div class="col-12">
+            {{ form.grade.label(class="col-form-label") }}
+        </div>
+        <div class="col-12">
+            {{ form.grade(class="form-select") }}
+        </div>
+        <div class="col-12">
+            {{ form.submit(class="btn btn-primary") }}
+        </div>
     </form>
 
     <p>
@@ -56,11 +57,10 @@
         {% else %}
             컴퓨터공학부(심화컴퓨터공학, 글로벌SW융합) 2019학년도 정시 입시결과
         {% endif %}
-        <br>
-        <img
-        src={{ "../static/images/" + data['images'][path] }}
-        alt="컴퓨터공학부 입시결과"
-        />
+        <br />
+        
+        <img src={{ "../static/images/" + data['images'][path] }}
+        alt="컴퓨터공학부 입시결과" />
     </p>
 </section>
 
@@ -69,7 +69,8 @@
 
     <div><a href="#toc" id="s-3-1">3-1</a>. Current Situation</div>
     <p>
-        <img src={{ "../static/images/" + data['images']['after_graduation'] }} alt="컴퓨터학부 취업통계" />
+        <img src={{ "../static/images/" + data['images']['after_graduation'] }}
+        alt="컴퓨터학부 취업통계" />
     </p>
 
     <div><a href="#toc" id="s-3-2">3-2</a>. After Graudation</div>
