--- a/templates/electronics.html
+++ b/templates/electronics.html
@@ -4,7 +4,7 @@
     <div>목차</div>
     <div>
         <div><a href="#s-1">1</a>. Introduction</div>
-        <div><a href="#s-1-1">1-1</a>. Electronics Engineering</div>
+        <div><a href="#s-1-1">1-1</a>. {{ data['name'] }}</div>
         <div><a href="#s-1-2">1-2</a>. Property</div>
         <div><a href="#s-1-3">1-3</a>. Location</div>
 
@@ -20,7 +20,7 @@
 <section>
     <div><a href="#toc" id="s-1">1</a>. Introduction</div>
 
-    <div><a href="#toc" id="s-1-1">1-1</a>. Electronics Engineering</div>
+    <div><a href="#toc" id="s-1-1">1-1</a>. {{ data['name'] }}</div>
     <p>{{ data['introduction'] }}</p>
 
     <div><a href="#toc" id="s-1-2">1-2</a>. Property</div>
@@ -36,11 +36,17 @@
 <section>
     <div><a href="#toc" id="s-2">2</a>. Grade</div>
 
-    <form  method="POST">
-        {{ form.hidden_tag() }}
-        {{ form.grade.label }}
-        {{ form.grade }}
-        {{ form.submit() }}
+    <form action="/electronics#s-2" method="POST" class="row row-cols-sm-auto align-items-center">
+            {{ form.hidden_tag() }}
+            <div class="col-12">
+                {{ form.grade.label(class="col-form-label") }}
+            </div>
+            <div class="col-12">
+                {{ form.grade(class="form-select") }}
+            </div>
+            <div class="col-12">
+                {{ form.submit(class="btn btn-primary") }}
+            </div>
     </form>
 
     <p>
@@ -51,11 +57,10 @@
         {% else %}
             전자공학부 2019학년도 정시 입시결과
         {% endif %}
-        <br>
-        <img
-        src={{ "../static/images/" + data['images'][path] }}
-        alt="전자공학부 입시결과"
-        />
+        <br />
+        
+        <img src={{ "../static/images/" + data['images'][path] }}
+        alt="전자공학부 입시결과" />
     </p>
 </section>
 
@@ -64,7 +69,8 @@
 
     <div><a href="#toc" id="s-3-1">3-1</a>. Current Situation</div>
     <p>
-        <img src={{ "../static/images/" + data['images']['after_graduation'] }} alt="전자공학부 취업통계" />
+        <img src={{ "../static/images/" + data['images']['after_graduation'] }}
+        alt="전자공학부 취업통계" />
     </p>
 
     <div><a href="#toc" id="s-3-2">3-2</a>. After Graudation</div>
