update department pages navbar design

--- a/static/css/button.css
+++ b/static/css/button.css
@@ -1,30 +1,34 @@
-.nav{
-                background-color:#6FADCF;
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-
-            }
-            .nav li{
-                display:inline;
-
-            }
-            .nav li a{
-                    display: block;
-                    background-color:#6FADCF;
-                    color: #000000;
-                    padding: 20px;
-                    width: 243px;
-                    text-decoration: none;
-                    text-align: center;
-                    font-weight: bold;
-                    font-size:26px
-            }
-            .nav li a.current{
-                    background-color: #0D47A1;
-                    color: white;
-            }
-            .nav li a:hover:not(.current){
-                    background-color: #0D47A1;
-                    color: white;
-            }
+#top-nav {
+    background-color: #6fadcf;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+#top-nav li {
+    display: inline;
+}
+#top-nav li a {
+    display: block;
+    background-color: #6fadcf;
+    color: #000000;
+    padding: 20px;
+    width: 243px;
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+    font-size: 26px;
+}
+#top-nav li a.current {
+    background-color: #0d47a1;
+    color: white;
+}
+#top-nav li a:hover:not(.current) {
+    background-color: #0d47a1;
+    color: white;
+}
+#left-nav a {
+    font-size: 18px;
+}
+#left-nav > a {
+    font-size: 25px;
+}
