--- a/templates/computer.html
+++ b/templates/computer.html
@@ -1,92 +1,113 @@
 {% extends 'base.html' %} {% block content %}
 
-<nav id="toc">
-    <div>목차</div>
-    <div>
-        <div><a href="#s-1">1</a>. Introduction</div>
-        <div><a href="#s-1-1">1-1</a>. {{ data['name'] }}</div>
-        <div><a href="#s-1-2">1-2</a>. Property</div>
-        <div><a href="#s-1-3">1-3</a>. Location</div>
-
-        <div><a href="#s-2">2</a>. Grade</div>
-
-        <div><a href="#s-3">3</a>. Employment</div>
-        <div><a href="#s-3-1">3-1</a>. Current Situationt</div>
-        <div><a href="#s-3-2">3-2</a>. After Graudation</div>
-        <div><a href="#s-3-3">3-3</a>. Corporation</div>
+<div class="row">
+    <div class="col-3">
+        <nav
+            id="left-nav"
+		class="navbar bg-secondary bg-opacity-25 flex-column align-items-stretch p-3 sticky-top"
+        >
+            <a class="navbar-brand" href="#">목차</a>
+            <nav class="nav flex-column">
+                <a class="nav-link" href="#item-1">1. Introduction</a>
+                <a class="nav-link ms-3 my-1" href="#item-1-1"
+                    >1-1. {{ data['name_en'] }}</a
+                >
+                <a class="nav-link ms-3 my-1" href="#item-1-2">1-2. Property</a>
+                <a class="nav-link ms-3 my-1" href="#item-1-3"
+                    >1-3. Location</a
+                >
+                <a class="nav-link" href="#item-2">2. Grade</a>
+                <a class="nav-link" href="#item-3">3. Employment</a>
+                <a class="nav-link ms-3 my-1" href="#item-3-1"
+                    >3-1. Current Situationt</a
+                >
+                <a class="nav-link ms-3 my-1" href="#item-3-2"
+                    >3-2. After Graudation</a
+                >
+                <a class="nav-link ms-3 my-1" href="#item-3-3"
+                    >3-3. Corporation</a
+                >
+            </nav>
+        </nav>
     </div>
-</nav>
+    <div class="col-9">
+        <h1>{{ data['name_ko'] }}</h1>
+        <section>
+            <h2 id="item-1">1. Introduction</h2>
 
-<section>
-    <div><a href="#toc" id="s-1">1</a>. Introduction</div>
+            <h3 id="item-1-1">1-1. {{ data['name_en'] }}</h3>
+            <p>{{ data['introduction'] }}</p>
 
-    <div><a href="#toc" id="s-1-1">1-1</a>. {{ data['name'] }}</div>
-    <p>{{ data['introduction'] }}</p>
+            <h3 id="item-1-2">1-2. Property</h3>
+            <p>{{ data['property'] }}</p>
 
-    <div><a href="#toc" id="s-1-2">1-2</a>. Property</div>
-    <p>{{ data['property'] }}</p>
+            <h3 id="item-1-3">1-3. Location</h3>
+            <ul>
+                <li>행정실위치 : {{ data['location'] }}</li>
+                <li>대표연락처 : {{ data['number'] }}</li>
+            </ul>
+        </section>
 
-    <div><a href="#toc" id="s-1-3">1-3</a>. Location</div>
-    <ul>
-        <li>행정실위치 : {{ data['location'] }}</li>
-        <li>대표연락처 : {{ data['number'] }}</li>
-    </ul>
-</section>
+        <section>
+            <h2 id="item-2">2. Grade</h2>
 
-<section>
-    <div><a href="#toc" id="s-2">2</a>. Grade</div>
+            <form
+                action="/computer#item-2"
+                method="POST"
+                class="row row-cols-sm-auto align-items-center"
+            >
+                {{ form.hidden_tag() }}
+                <div class="col-12">
+                    {{ form.grade.label(class="col-form-label") }}
+                </div>
+                <div class="col-12">
+                    {{ form.grade(class="form-select") }}
+                </div>
+                <div class="col-12">
+                    {{ form.submit(class="btn btn-primary") }}
+                </div>
+            </form>
 
-    <form action="/computer#s-2" method="POST" class="row row-cols-sm-auto align-items-center">
-        {{ form.hidden_tag() }}
-        <div class="col-12">
-            {{ form.grade.label(class="col-form-label") }}
-        </div>
-        <div class="col-12">
-            {{ form.grade(class="form-select") }}
-        </div>
-        <div class="col-12">
-            {{ form.submit(class="btn btn-primary") }}
-        </div>
-    </form>
+            <p>
+                {% if path == "grade_21" %}
+                    {{ data['name_ko'] }}(심화컴퓨터공학, 글로벌SW융합) 2021학년도 정시 입시결과
+                {% elif path == "grade_20" %}
+                    {{ data['name_ko'] }}(심화컴퓨터공학, 글로벌SW융합) 2020학년도 정시 입시결과
+                {% else %}
+                    {{ data['name_ko'] }}(심화컴퓨터공학, 글로벌SW융합) 2019학년도 정시 입시결과
+                {% endif %}
+                <br />
 
-    <p>
-        {% if path == "grade_21" %}
-            컴퓨터공학부(심화컴퓨터공학, 글로벌SW융합) 2021학년도 정시 입시결과
-        {% elif path == "grade_20" %}
-            컴퓨터공학부(심화컴퓨터공학, 글로벌SW융합) 2020학년도 정시 입시결과
-        {% else %}
-            컴퓨터공학부(심화컴퓨터공학, 글로벌SW융합) 2019학년도 정시 입시결과
-        {% endif %}
-        <br />
-        
-        <img src={{ "../static/images/" + data['images'][path] }}
-        alt="컴퓨터공학부 입시결과" />
-    </p>
-</section>
+                <img src={{ "../static/images/" + data['images'][path] }}
+                alt="컴퓨터학부 입시결과" />
+            </p>
+        </section>
 
-<section>
-    <div><a href="#toc" id="s-3">3</a>. Employment</div>
+        <section>
+            <h2 id="item-3">3. Employment</h2>
 
-    <div><a href="#toc" id="s-3-1">3-1</a>. Current Situation</div>
-    <p>
-        <img src={{ "../static/images/" + data['images']['after_graduation'] }}
-        alt="컴퓨터학부 취업통계" />
-    </p>
+            <h3 id="item-3-1">3-1. Current Situation</h3>
+            <p>
+                <img src={{ "../static/images/" +
+                data['images']['after_graduation'] }} alt="컴퓨터학부 취업통계"
+                />
+            </p>
 
-    <div><a href="#toc" id="s-3-2">3-2</a>. After Graudation</div>
-    <p>
-        IT 계열 기업으로의 취업이 70% 정도를 차지하고 있으며, 일반 기업으로는
-        공무원이나 증권회사와 같은 금융계통, 그리고 일반 사무직 중에서 컴퓨터를
-        많이 다루는 직군에 취업하고 있습니다.
-    </p>
+            <h3 id="item-3-2">3-2. After Graudation</h3>
+            <p>
+                IT 계열 기업으로의 취업이 70% 정도를 차지하고 있으며, 일반
+                기업으로는 공무원이나 증권회사와 같은 금융계통, 그리고 일반
+                사무직 중에서 컴퓨터를 많이 다루는 직군에 취업하고 있습니다.
+            </p>
 
-    <div><a href="#toc" id="s-3-3">3-3</a>. Corporation</div>
-    <p>{{ data['job'] }}</p>
+            <h3 id="item-3-3">3-3. Corporation</h3>
+            <p>{{ data['job'] }}</p>
 
-    <a href="https://www.youtube.com/channel/UCboYjEZtDixhOlbmNyJQJDQ"
-        >컴퓨터학부 유튜브 채널</a
-    >
-</section>
+            <a href="https://www.youtube.com/channel/UCboYjEZtDixhOlbmNyJQJDQ"
+                >컴퓨터학부 유튜브 채널</a
+            >
+        </section>
+    </div>
+</div>
 
 {% endblock %}
-
