--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,7 @@
              <div class ="line"></div>
             <div class="back">
             <div class="main">
-                <img src="../static/images/knumark.jpg" alt=""width="150" height="150">
-                <b>IT대학</b>
+                <img src="../static/ITEEN.png">
             </div>
             </div>
         </header>
