--- a/templates/electronics.html
+++ b/templates/electronics.html
@@ -6,7 +6,7 @@
             id="left-nav"
             class="navbar bg-secondary bg-opacity-25 flex-column align-items-stretch p-3 sticky-top"
         >
-            <a class="navbar-brand" href="#">목차</a>
+            <a class="navbar-brand" href="#">CONTENTS</a>
             <nav class="nav flex-column">
                 <a class="nav-link" href="#item-1">1. Introduction</a>
                 <a class="nav-link ms-3 my-1" href="#item-1-1"
