--- a/templates/computer.html
+++ b/templates/computer.html
@@ -4,34 +4,41 @@
     <div class="col-3">
         <nav
             id="left-nav"
-		class="navbar bg-secondary bg-opacity-25 flex-column align-items-stretch p-3 sticky-top"
+            class="navbar bg-secondary bg-opacity-25 flex-column align-items-stretch p-3 sticky-top"
         >
-            <a class="navbar-brand" href="#">CONTENTS</a>
+            <a class="navbar-brand" href="#">Contents</a>
             <nav class="nav flex-column">
                 <a class="nav-link" href="#item-1">1. Introduction</a>
                 <a class="nav-link ms-3 my-1" href="#item-1-1"
                     >1-1. {{ data['name_en'] }}</a
                 >
                 <a class="nav-link ms-3 my-1" href="#item-1-2">1-2. Property</a>
-                <a class="nav-link ms-3 my-1" href="#item-1-3"
-                    >1-3. Location</a
+                <a class="nav-link ms-3 my-1" href="#item-1-3">1-3. Location</a>
+
+                <a class="nav-link" href="#item-2">2. Information</a>
+                <a class="nav-link ms-3 my-1" href="#item-2-1">2-1. Grade</a>
+                <a class="nav-link ms-3 my-1" href="#item-2-2"
+                    >2-2. High School Curriculum</a
                 >
-                <a class="nav-link" href="#item-2">2. Grade</a>
+                <a class="nav-link ms-3 my-1" href="#item-2-3"
+                    >2-3. Essential Subject</a
+                >
+
                 <a class="nav-link" href="#item-3">3. Employment</a>
                 <a class="nav-link ms-3 my-1" href="#item-3-1"
-                    >3-1. Current Situationt</a
+                    >3-1. Current Situation</a
                 >
                 <a class="nav-link ms-3 my-1" href="#item-3-2"
                     >3-2. After Graudation</a
                 >
-                <a class="nav-link ms-3 my-1" href="#item-3-3"
-                    >3-3. Corporation</a
-                >
+                <a class="nav-link ms-3 my-1" href="#item-3-3">3-3. Wage</a>
             </nav>
         </nav>
     </div>
-    <div class="col-9">
+
+    <div class="col-8">
         <h1>{{ data['name_ko'] }}</h1>
+
         <section>
             <h2 id="item-1">1. Introduction</h2>
 
@@ -46,13 +53,16 @@
                 <li>행정실위치 : {{ data['location'] }}</li>
                 <li>대표연락처 : {{ data['number'] }}</li>
             </ul>
+            <img src={{ "../static/images/" + data['images']['location'] }}
+            alt="컴퓨터학부 위치" />
         </section>
 
         <section>
-            <h2 id="item-2">2. Grade</h2>
+            <h2 id="item-2">2. Information</h2>
 
+            <h3 id="item-2-1">2-1. Grade</h3>
             <form
-                action="/computer#item-2"
+                action="/computer#item-2-1"
                 method="POST"
                 class="row row-cols-sm-auto align-items-center"
             >
@@ -60,9 +70,7 @@
                 <div class="col-12">
                     {{ form.grade.label(class="col-form-label") }}
                 </div>
-                <div class="col-12">
-                    {{ form.grade(class="form-select") }}
-                </div>
+                <div class="col-12">{{ form.grade(class="form-select") }}</div>
                 <div class="col-12">
                     {{ form.submit(class="btn btn-primary") }}
                 </div>
@@ -81,6 +89,22 @@
                 <img src={{ "../static/images/" + data['images'][path] }}
                 alt="컴퓨터학부 입시결과" />
             </p>
+
+            <h3 id="item-2-2">2-2. High School Curriculum</h3>
+            <ul>
+                <li>수학교과 : 수학ⅠㆍⅡ, 미적분, 확률과 통계</li>
+                <li>과학교과 : 물리학Ⅰ, 화학Ⅰ</li>
+                <li>기술ㆍ가정교과 : 기술ㆍ가정, 정보</li>
+            </ul>
+
+            <h3 id="item-2-3">2-3. Important Subject</h3>
+            <ul>
+                <li>자료구조</li>
+                <li>알고리즘</li>
+                <li>컴퓨터구조</li>
+                <li>운영체제</li>
+                <li>데이터베이스</li>
+            </ul>
         </section>
 
         <section>
@@ -94,14 +118,13 @@
             </p>
 
             <h3 id="item-3-2">3-2. After Graudation</h3>
-            <p>
-                IT 계열 기업으로의 취업이 70% 정도를 차지하고 있으며, 일반
-                기업으로는 공무원이나 증권회사와 같은 금융계통, 그리고 일반
-                사무직 중에서 컴퓨터를 많이 다루는 직군에 취업하고 있습니다.
-            </p>
-
-            <h3 id="item-3-3">3-3. Corporation</h3>
             <p>{{ data['job'] }}</p>
+
+            <h3 id="item-3-3">3-3. Wage</h3>
+            <img
+                src={{ "../static/images/" + data['images']['wage'] }}
+                alt="컴퓨터학부 임금"
+            />
 
             <a href="https://www.youtube.com/channel/UCboYjEZtDixhOlbmNyJQJDQ"
                 >컴퓨터학부 유튜브 채널</a
@@ -111,3 +134,4 @@
 </div>
 
 {% endblock %}
+
