--- a/templates/computer.html
+++ b/templates/computer.html
@@ -121,11 +121,10 @@
             <p>{{ data['job'] }}</p>
 
             <h3 id="item-3-3">3-3. Wage</h3>
-            <img
-                src={{ "../static/images/" + data['images']['wage'] }}
-                alt="컴퓨터학부 임금"
-            />
-
+            <img src={{ "../static/images/" + data['images']['wage'] }}
+            alt="컴퓨터학부 임금"/>
+	    <br />
+	    
             <a href="https://www.youtube.com/channel/UCboYjEZtDixhOlbmNyJQJDQ"
                 >컴퓨터학부 유튜브 채널</a
             >
