--- a/templates/electric.html
+++ b/templates/electric.html
@@ -121,10 +121,14 @@
             <p>{{ data['job'] }}</p>
 
             <h3 id="item-3-3">3-3. Wage</h3>
-            <img
-                src={{ "../static/images/" + data['images']['wage'] }}
-                alt="전기공학과 임금"
-            />
+            <p>
+                <img src={{ "../static/images/" + data['images']['wage'] }}
+                alt="전기공학과 임금"/>
+                <ul>
+                    <li>{{ data['corporation_name'][0] }} 평균 임금: {{ data['corporation_pay'][0] }}</li>
+                    <li>{{ data['corporation_name'][1] }} 평균 임금: {{ data['corporation_pay'][1] }}</li>
+                </ul>
+            </p>
         </section>
     </div>
 </div>
