update home navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
             </div>
         </header>
                 <ul class="nav" id="top-nav">
-		    <li><a href="{{ url_for('index') }}"><img src="../static/images/it.jpg" alt="" width="300" height="85"></a></li>
+		    <li><a class="navbar-brand dept" href="{{ url_for('index') }}">홈</a></li>
 		    <li><a class="navbar-brand dept" href="{{ url_for('electronics') }}">전자공학부</a></li>
                     <li><a class="navbar-brand dept" href="{{ url_for('computer') }}">컴퓨터학부</a></li>
                     <li><a class="navbar-brand dept" href="{{ url_for('electric') }}">전기공학과</a></li>
